hb-policies/hb-custom-constraints/hbl-custom-constraints/resource-provision/container-image-restricted-repos-constraint.yaml
# Copyright 2023 Google LLC
#
# This is “Software” that is licensed under the “General Software” section of
# the Service Specific Terms (https://cloud.google.com/terms/service-terms) for
# usage in accordance with the following “Scope of Use”: This file may only be
# used on an Anthos cluster, including any associated ci/cd use. “Anthos
# cluster” is defined as “A Cluster (of any kind) registered to a fleet project
# where the Anthos API is enabled”.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedRepos
metadata:
  name: container-image-restricted-repos
spec:
  enforcementAction: dryrun
  match:
    kinds:
    - apiGroups:
      - ""
      kinds:
      - Pod
    - apiGroups:
      - ""
      kinds:
      - ReplicationController
    - apiGroups:
      - apps
      kinds:
      - ReplicaSet
      - Deployment
      - StatefulSet
      - DaemonSet
    - apiGroups:
      - batch
      kinds:
      - CronJob
      - Job
  parameters:
    repos:
      - gcr.io/gke-release/
      - gcr.io/anthos-baremetal-release/
      - gcr.io/config-management-release/
      - gcr.io/kubebuilder/
      - gcr.io/gkeconnect/
      - gke.gcr.io/
      - gcr.io/
      - us.gcr.io/
      - us-docker.pkg.dev/
      - docker.io/
      - autopilot.gke.io/
