hb-policies/hb-custom-constraints/hbl-custom-constraints/resource-provision/custom-autopilot-require-gvisor-constraint.yaml
# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sCustomAutopilotRequireGvisor
metadata: 
  name: custom-autopilot-require-gvisor
spec: 
  enforcementAction: dryrun
  match: 
    kinds: 
      - apiGroups:
        - apps
        kinds:
        - ReplicaSet
        - Deployment
        - StatefulSet
        - DaemonSet
      - apiGroups:
        - ""
        kinds:
        - Pod
      - apiGroups:
        - batch
        kinds:
        - CronJob
        - Job
    excludedNamespaces: 
      - config-management-monitoring 
      - config-management-system
      - default 
      - gatekeeper-system
      - gke-connect 
      - kube-node-lease
      - kube-public
      - kube-system 
      - resource-group-system
      - gke-gmp-system
  parameters:
    validName: "gvisor"
